fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -370,7 +370,7 @@ body {
 }
 
 .travel-image, .food-image, .cat-image {
-	width: 5em;
+	width: 4.5em;
 	height: auto;
 	padding: 0;
 	margin: 0;
@@ -382,7 +382,7 @@ body {
 .travel-image1, .travel-image2, .travel-image3, .travel-image4, .travel-image5, .travel-image6,
 .food-image1, .food-image2, .food-image3, .food-image4, .food-image5, .food-image6,
 .cat-image1, .cat-image2, .cat-image3, .cat-image4, .cat-image5, .cat-image6 {
-	width: 5em;
+	width: 4.5em;
 	height: auto;
 	padding: 0;
 	margin: 0;
